# Agate

./: .gitignore  COPYRIGHT.md  Cargo.toml  README.md
AgateCS/: AgateCS.csproj  AgateCS.sln  Config.cs  Expr.cs  IL.cs  Program.cs  Type.cs
AgateCS/Compiler/: Ast.cs  Expr.cs  Parser.cs  Types.cs
AgateCS/Scanner/: Scanner.cs  Token.cs
AgateCS/Utils/: Option.cs  Range.cs  Result.cs
AgateDotnet/Compiler/: Compiler.sln
AgateDotnet/Scanner/: Library.fs  ScanUtils.fs  Scanner.fsproj
AgateDotnet/Utils/: Range.cs  Token.cs
ag-compiler/: Cargo.toml  LICENSE-APACHE.md
ag-compiler/src/: lib.rs  parser.rs  repr.rs  scanner.rs  token.rs  token_type.rs
ag-utils/: Cargo.toml
ag-utils/src/: lib.rs  objects.rs  value.rs
ag_py/: ag_types.py  expr.py  main.py  value.py
ag_rs/: COPYRIGHT.md  Cargo.toml  LICENSE-MIT.md
ag_rs/ag-ast-builder/: Cargo.toml
ag_rs/ag-ast-builder/src/: analysis.rs  func.rs  lib.rs  literals.rs  types.rs
ag_rs/ag-compiler/: Cargo.toml
ag_rs/ag-compiler/src/: lib.rs  opt.rs  parser.rs  repr.rs  scanner.rs  token.rs  token_type.rs
ag_rs/ag-compiler/src/parser/: prec.rs
ag_rs/ag-compiler/src/repr/: expr.rs  items.rs  utils.rs
ag_rs/ag-ir/: Cargo.toml
ag_rs/ag-ir/src/: ast.rs  lib.rs
ag_rs/ag-utils/src/: lib.rs  value.rs
ag_rs/ag_rt/: Cargo.toml
ag_rs/ag_rt/src/: main.rs  thread.rs
ag_rs/ag_rt/src/io/: mod.rs
ag_rs/serin/: Cargo.toml
ag_rs/serin-utils/: Cargo.toml
ag_rs/serin-utils/src/: instructions.rs  lazy.rs  lib.rs  object.rs  value.rs
ag_rs/serin-vm/: Cargo.toml
ag_rs/serin-vm/src/: lib.rs  main_vm.rs  mem_pool.rs
ag_rs/serin-vm/src/sub_vm/: mod.rs  process.rs
ag_rs/serin-vm/src/vm_utils/: call_frame.rs  mod.rs
ag_rs/serin_ast_builder/: Cargo.toml
ag_rs/src/: main.rs
compiler/: Cargo.toml
compiler/src/: lib.rs  parser.rs  repr.rs  scanner.rs  token_type.rs
docs/: about.md  instruction_set.md
lang/: example.wasm  example.wat  html.ag  html.avian  masterplan.md
lang/agate-syntax-highlighting/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
lang/avian-syntax-highlighting/: CHANGELOG.md  README.md  language-configuration.json  package.json  (+1 more)
src/: main.rs
utils/: Cargo.toml
(+8 files in other folders)
