[package]
name = "agate"
version = "0.1.0"
edition = "2021"
authors = ["Cooper Bouchard <cobouchard11@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
utils = { path = "utils" }                                             # licence = unnecessary (made by us)
clap = { version = "4.5.17", features = ["unicode", "derive", "env"] }

[workspace]
members = ["compiler", "utils"]
