[package]
name = "agate"
version = "0.1.0"
edition = "2021"
authors = ["Cooper Bouchard <cobouchard11@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
ag-utils = { path = "ag-utils" } # licence = (made by us) MIT or Apache 2.0 
clap = { version = "4.5.17", features = [
    "unicode",
    "derive",
    "env",
] } # license = MIT or Apache-2.0

[workspace]
members = ["ag-compiler", "ag-utils", "ag-ir", "ag-ast-builder", "ag_rt"]

[workspace.dependencies]
crossbeam = "0.8.4"
dashu = "0.4.2"                 # license = MIT or Apache 2.0
unicode-segmentation = "1.12.0"
parking_lot = "0.12.3"
